unpackaged/main/default/objects/Case/fields/Account_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Profile__c</fullName>
    <formula>Account.Account_Owner_Profile_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Profile</label>
    <type>Text</type>
</CustomField>