unpackaged/main/default/objects/Case/fields/Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Type__c</fullName>
    <description>The type of amendment for a contract</description>
    <label>Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
            <value>
                <fullName>Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>