unpackaged/main/default/objects/Case/fields/Awaiting_Information_Reason__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Information_Reason__c</fullName>
    <label>Awaiting Information Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting supplier quote</fullName>
            </value>
            <value>
                <fullName>Awaiting supplier info</fullName>
            </value>
            <value>
                <fullName>Awaiting store info</fullName>
            </value>
            <value>
                <fullName>Awaiting internal team info</fullName>
            </value>
            <value>
                <fullName>Awaiting customer info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>