unpackaged/main/default/objects/Case/fields/Case_Reason_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Subtype__c</fullName>
    <label>Case Reason Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Access</fullName>
            </value>
            <value>
                <fullName>Card Query</fullName>
            </value>
            <value>
                <fullName>PP App Query</fullName>
            </value>
            <value>
                <fullName>Loss Prevention</fullName>
            </value>
            <value>
                <fullName>Invoice Queries</fullName>
            </value>
            <value>
                <fullName>Account Info</fullName>
            </value>
            <value>
                <fullName>Credit Limit Queries</fullName>
            </value>
            <value>
                <fullName>Discount Enquiry</fullName>
            </value>
            <value>
                <fullName>Promos &amp; Trials</fullName>
            </value>
            <value>
                <fullName>Merchandise Enquiry</fullName>
            </value>
            <value>
                <fullName>Standard Quote</fullName>
            </value>
            <value>
                <fullName>Account Managed</fullName>
            </value>
            <value>
                <fullName>Non Account</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Quote/Order Amendment</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Delivery Query</fullName>
            </value>
            <value>
                <fullName>Collection Query</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
            </value>
            <value>
                <fullName>Outbound Campaign</fullName>
            </value>
            <value>
                <fullName>Powerpass</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Store Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>