unpackaged/main/default/objects/Case/fields/Case_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Reason__c</fullName>
    <description>Voice Of Customer Case Sub Reasons</description>
    <label>Case Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery not on time</fullName>
            </value>
            <value>
                <fullName>Incorrect product delivered</fullName>
            </value>
            <value>
                <fullName>Missing items from delivery</fullName>
            </value>
            <value>
                <fullName>Missing delivery</fullName>
            </value>
            <value>
                <fullName>Damaged stock</fullName>
            </value>
            <value>
                <fullName>Delivered in wrong location</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory delivery outcome</fullName>
            </value>
            <value>
                <fullName>Damage to customer site/property</fullName>
            </value>
            <value>
                <fullName>Incorrect product delivered &amp; installed on site</fullName>
            </value>
            <value>
                <fullName>Order not ready for pick-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>