unpackaged/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This is created for Retail Customer Support Team to manage the categorisation of the case. This field is dependent on Type field</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account - Internal Transfer</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Cancel/Refund</fullName>
            </value>
            <value>
                <fullName>Order Issue</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>CS Team</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Store Process</fullName>
            </value>
            <value>
                <fullName>Store Team</fullName>
            </value>
            <value>
                <fullName>Website Functionality</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Stock Availability</fullName>
            </value>
            <value>
                <fullName>Product Enquiry</fullName>
            </value>
            <value>
                <fullName>Incorrect Information</fullName>
            </value>
            <value>
                <fullName>Price Enquiry</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>ETA</fullName>
            </value>
            <value>
                <fullName>Manual Order</fullName>
            </value>
            <value>
                <fullName>Order Edit</fullName>
            </value>
            <value>
                <fullName>AfterPay</fullName>
            </value>
            <value>
                <fullName>Failed Payment</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Riskified</fullName>
            </value>
            <value>
                <fullName>ZipPay/PayPal</fullName>
            </value>
            <value>
                <fullName>Entry Policy</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>