unpackaged/main/default/objects/Case/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <description>Picklist value needs to be filled while closing a case, implemented for contactCenter</description>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed - Supplier Follow up</fullName>
            </value>
            <value>
                <fullName>Closed - Internal Team Follow up</fullName>
            </value>
            <value>
                <fullName>Closed - Internal Team Transfer</fullName>
            </value>
            <value>
                <fullName>Closed - With Customer Follow up</fullName>
            </value>
            <value>
                <fullName>Closed - Customer Abandoned</fullName>
            </value>
            <value>
                <fullName>Closed - First Level</fullName>
            </value>
            <value>
                <fullName>Closed - Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>