unpackaged/main/default/objects/Case/fields/Close_Summary__c.field-meta.xml
<CustomField>
    <fullName>Close_Summary__c</fullName>
    <inlineHelpText>summrise the close action for this case</inlineHelpText>
    <label>Close Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>