unpackaged/main/default/objects/Case/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the existing Contract</description>
    <label>Contract Number - Existing Contracts</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Contract_Request</relationshipName>
    <type>Lookup</type>
</CustomField>