unpackaged/main/default/objects/Case/fields/COS_ID__c.field-meta.xml
<CustomField>
    <fullName>COS_ID__c</fullName>
    <description>The contract COS ID</description>
    <inlineHelpText>Enter a COS ID which contains the items for your contract or attach an Excel spreadsheet to the case once it has been created</inlineHelpText>
    <label>COS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>