unpackaged/main/default/objects/Case/fields/COS_Number__c.field-meta.xml
<CustomField>
    <fullName>COS_Number__c</fullName>
    <description>The COS Number for the COS users want to base their contract off of.</description>
    <inlineHelpText>Enter a COS Number which contains the items for your contract or attach an Excel spreadsheet to the case once it has been created</inlineHelpText>
    <label>COS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>