unpackaged/main/default/objects/Case/fields/Cost_Zones__c.field-meta.xml
<CustomField>
    <fullName>Cost_Zones__c</fullName>
    <description>Unrestricted list of contract applicable cost zones</description>
    <label>Cost Zone(s) - New Contract Only</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>AU CZ 1</fullName>
            </value>
            <value>
                <fullName>AU CZ 2</fullName>
            </value>
            <value>
                <fullName>AU CZ 3</fullName>
            </value>
            <value>
                <fullName>NZ CZ 1</fullName>
            </value>
            <value>
                <fullName>NZ CZ 2</fullName>
            </value>
            <value>
                <fullName>NZ CZ 3</fullName>
            </value>
            <value>
                <fullName>NZ CZ 4</fullName>
            </value>
            <value>
                <fullName>NZ CZ 5</fullName>
            </value>
            <value>
                <fullName>NZ CZ 6</fullName>
            </value>
            <value>
                <fullName>NZ CZ 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>