unpackaged/main/default/objects/Case/fields/Current_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Age__c</fullName>
    <formula>IF(ISNULL( Reopened_Datetime__c ),  Age__c ,  Reopen_Age__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>