unpackaged/main/default/objects/Case/fields/Customer_PowerPass_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PowerPass_Account_Number__c</fullName>
    <formula>Account.Power_Pass_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PowerPass Account Number</label>
    <type>Text</type>
</CustomField>