unpackaged/main/default/objects/Case/fields/Customer_R12_Sales__c.field-meta.xml
<CustomField>
    <fullName>Customer_R12_Sales__c</fullName>
    <formula>Account.R12_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer R12 Sales($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>