unpackaged/main/default/objects/Case/fields/Customer_s_Expected_Spend__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Expected_Spend__c</fullName>
    <label>Customer&#39;s Expected Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>