unpackaged/main/default/objects/Case/fields/Date_Occured__c.field-meta.xml
<CustomField>
    <fullName>Date_Occured__c</fullName>
    <description>Date Occurred for VOC Case Type</description>
    <label>Date Occured</label>
    <type>DateTime</type>
</CustomField>