unpackaged/main/default/objects/Case/fields/Date_Time_Opened_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened_2__c</fullName>
    <description>This is used in reporting only</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Opened(2)</label>
    <type>DateTime</type>
</CustomField>