unpackaged/main/default/objects/Case/fields/Date_Time_Opened_3__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened_3__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Time Opened(3)</label>
    <type>DateTime</type>
</CustomField>