unpackaged/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due Date of the NCQ Request</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>