unpackaged/main/default/objects/Case/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>The date in which the contract is effective</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>