unpackaged/main/default/objects/Case/fields/Estimated_Quote_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Quote_Completion__c</fullName>
    <label>Estimated Quote Completion</label>
    <type>Date</type>
</CustomField>