unpackaged/main/default/objects/Case/fields/Fulfillment_Location__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fulfillment Location</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>