unpackaged/main/default/objects/Case/fields/Impact_Grading__c.field-meta.xml
<CustomField>
    <fullName>Impact_Grading__c</fullName>
    <label>Impact Grading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer impact</fullName>
            </value>
            <value>
                <fullName>No customer impact</fullName>
            </value>
            <value>
                <fullName>Safety impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>