unpackaged/main/default/objects/Case/fields/Is_Contract_Owner_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Owner_Logged_in_User__c</fullName>
    <description>This formula field looks at the related Contract&#39;s reviewer and determines if that user is currently the logged in user. This field is used for validation rules regarding case creation.</description>
    <formula>IF(
$User.Id =  Contract_Number__r.Reviewer__r.Id  ||
$User.Id =   Contract_Number__r.Original_Reviewer__r.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contract Reviewer Logged in User</label>
    <type>Checkbox</type>
</CustomField>