unpackaged/main/default/objects/Case/fields/Is_NCQ__c.field-meta.xml
<CustomField>
    <fullName>Is_NCQ__c</fullName>
    <description>Used in reporting</description>
    <formula>If( RecordType.DeveloperName  = &#39;NCQ_Request&#39;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is NCQ</label>
    <type>Checkbox</type>
</CustomField>