unpackaged/main/default/objects/Case/fields/Is_this_deal_for_a_valid_NCQ_Category__c.field-meta.xml
<CustomField>
    <fullName>Is_this_deal_for_a_valid_NCQ_Category__c</fullName>
    <inlineHelpText>NCQ Categories are Appliances, FOW, Doors, Door Frames, or other high volume purchases</inlineHelpText>
    <label>Is this deal for a valid NCQ Category?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>