unpackaged/main/default/objects/Case/fields/Is_this_quote_greater_than_20k__c.field-meta.xml
<CustomField>
    <fullName>Is_this_quote_greater_than_20k__c</fullName>
    <label>Is this quote greater than $20k?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>