unpackaged/main/default/objects/Case/fields/Issue_Overview__c.field-meta.xml
<CustomField>
    <fullName>Issue_Overview__c</fullName>
    <description>Issue Overview for VOC case Type</description>
    <label>Issue Overview</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>