unpackaged/main/default/objects/Case/fields/Issue_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Issue_Root_Cause__c</fullName>
    <description>Root cause reasons for Voice Of Customer</description>
    <label>Issue Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered the Wrong Product</fullName>
            </value>
            <value>
                <fullName>Ordered the Wrong Quantity</fullName>
            </value>
            <value>
                <fullName>Keying Error</fullName>
            </value>
            <value>
                <fullName>Picking Error</fullName>
            </value>
            <value>
                <fullName>Missed Call-Up</fullName>
            </value>
            <value>
                <fullName>Delivery was Late</fullName>
            </value>
            <value>
                <fullName>Delivered to Wrong Location</fullName>
            </value>
            <value>
                <fullName>Goods Were Damaged</fullName>
            </value>
            <value>
                <fullName>Communication Impact</fullName>
            </value>
            <value>
                <fullName>Pricing Impact</fullName>
            </value>
            <value>
                <fullName>Couldn’t Meet Delivery Request</fullName>
            </value>
            <value>
                <fullName>Quote Took too Long</fullName>
            </value>
            <value>
                <fullName>OMS Impact</fullName>
            </value>
            <value>
                <fullName>Process Not Followed</fullName>
            </value>
            <value>
                <fullName>Positive Feedback</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>