unpackaged/main/default/objects/Case/fields/Issue_Source__c.field-meta.xml
<CustomField>
    <fullName>Issue_Source__c</fullName>
    <label>Issue Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfilment Centre</fullName>
            </value>
            <value>
                <fullName>Trade Centre</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Beaumont Tiles</fullName>
            </value>
            <value>
                <fullName>Commercial Services Team</fullName>
            </value>
            <value>
                <fullName>Trade Assist</fullName>
            </value>
            <value>
                <fullName>Frame &amp; Truss</fullName>
            </value>
            <value>
                <fullName>Supply &amp; Install</fullName>
            </value>
            <value>
                <fullName>National Commercial Quotes</fullName>
            </value>
            <value>
                <fullName>Transport Provider</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>Stock not Available (Internal)</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>