unpackaged/main/default/objects/Case/fields/NZ_Region__c.field-meta.xml
<CustomField>
    <fullName>NZ_Region__c</fullName>
    <inlineHelpText>Populating this field will automatically assign this case to the  NZ CST/AM Queue.</inlineHelpText>
    <label>NZ Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region 1</fullName>
            </value>
            <value>
                <fullName>Region 2</fullName>
            </value>
            <value>
                <fullName>Region 3</fullName>
            </value>
            <value>
                <fullName>Region 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>