unpackaged/main/default/objects/Case/fields/Offer_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Offer_opportunity__c</fullName>
    <formula>TEXT(Opportunity__r.Offer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer (Opportunity)</label>
    <type>Text</type>
</CustomField>