unpackaged/main/default/objects/Case/fields/Opportunity_COS_Num__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_COS_Num__c</fullName>
    <formula>Opportunity__r.SyncedQuote.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity COS Num</label>
    <type>Text</type>
</CustomField>