unpackaged/main/default/objects/Case/fields/PowerPass_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PowerPass_Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PowerPass Account Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>