unpackaged/main/default/objects/Case/fields/Previous_Duration__c.field-meta.xml
<CustomField>
    <fullName>Previous_Duration__c</fullName>
    <label>Previous Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>