unpackaged/main/default/objects/Case/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <label>Rejection Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>