unpackaged/main/default/objects/Case/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consolidated with other offer</fullName>
            </value>
            <value>
                <fullName>Tender request</fullName>
            </value>
            <value>
                <fullName>Can’t meet program</fullName>
            </value>
            <value>
                <fullName>Customer Credit/Account related issue</fullName>
            </value>
            <value>
                <fullName>Did not meet Specifications</fullName>
            </value>
            <value>
                <fullName>Insufficient information to provide quote</fullName>
            </value>
            <value>
                <fullName>Service offer unavailable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>