unpackaged/main/default/objects/Case/fields/Reopen_Age__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Age__c</fullName>
    <formula>IF(ISNULL(ClosedDate), NOW() - Reopened_Datetime__c, ClosedDate - Reopened_Datetime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reopen Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>