unpackaged/main/default/objects/Case/fields/Reopened_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Reopened_Datetime__c</fullName>
    <label>Reopened Datetime</label>
    <type>DateTime</type>
</CustomField>