unpackaged/main/default/objects/Case/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>F&amp;T Request Details</label>
    <type>TextArea</type>
</CustomField>