unpackaged/main/default/objects/Case/fields/Retail_Backened_Prior_Queue__c.field-meta.xml
<CustomField>
    <fullName>Retail_Backened_Prior_Queue__c</fullName>
    <description>This will be used as a backend field which will be consumed by different automations to identify the original queue</description>
    <label>Retail Backened Prior Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>