unpackaged/main/default/objects/Case/fields/Run_Case_Assignment_via_Apex__c.field-meta.xml
<CustomField>
    <fullName>Run_Case_Assignment_via_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a criteria field for the &quot;Case On Create&quot; Process Builder to fire Case Assignment Rules for the Case when True</description>
    <label>Run Case Assignment via Apex?</label>
    <type>Checkbox</type>
</CustomField>