unpackaged/main/default/objects/Case/fields/SIte_Impacted__c.field-meta.xml
<CustomField>
    <fullName>SIte_Impacted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIte Impacted (Project)</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Cases (SIte Impacted)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>