unpackaged/main/default/objects/Case/fields/State_opportunity__c.field-meta.xml
<CustomField>
    <fullName>State_opportunity__c</fullName>
    <formula>TEXT(Opportunity__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State (Opportunity)</label>
    <type>Text</type>
</CustomField>